Updated folders and folder names

--- a/NumbersInWords.Tests/NumbersInWords.Tests.csproj
+++ b/NumbersInWords.Tests/NumbersInWords.Tests.csproj
@@ -81,7 +81,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\NumbersInWordsConverterTest.cs" />
+    <Compile Include="Converters\NumbersInWordsConverterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
