--- a/NumbersInWords/NumbersInWords.csproj
+++ b/NumbersInWords/NumbersInWords.csproj
@@ -142,7 +142,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Converter\NumbersInWordsConverter.cs" />
+    <Compile Include="Converters\NumbersInWordsConverter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
